--- a/guestRaces/guestRacesTabs/ch14/wonders.html
+++ b/guestRaces/guestRacesTabs/ch14/wonders.html
@@ -49,15 +49,15 @@
                   by up to 80%. Combining this with the Polar Bear evolving building, which further reduces the cooldown by 20%, results 
                   in a total 100% reduction! This enables you to play the entire Tournament, including all rounds, in one session, saving not only 
                   time but also valuable resources like Military Boost buildings and Pet Food. With the duration you now spend in Tournament, being covered by the 
-                  effect of, for instance, the Fire Phoenix, only one Pet Food for it is required and so the success in Tournaments is significantly enhanced - a strategy widely adopted by 
-                  veteran players.<br>
+                  effect of, for instance, the Fire Phoenix, only one Pet Food for it is required and so your success in Tournaments can be significantly 
+                  enhanced - a strategy widely adopted by veteran players.<br>
                   You can also utilize the cooldown reduction to your advantage by saving your Military Boost Buildings. 
                   Here's what I do: one week, I play the Tournament on Friday, and the following week, I play it on Tuesday. 
                   This way, I can cover both Tournaments with just one set of Military Boost buildings, as my Tournament days fall within the 5-day range 
                   when these buildings remain active.<br>
                   In addition, the wonder's second effect is a valuable addition and even surpasses the Sentient Goods production boost offered 
                   by the Vortex of Storage wonder in the following chapter. I highly recommend everyone to build this wonder, and I even 
-                  suggest to accelerate progressing in previous chapters to construct it as soon as possible.</td>
+                  suggest to accelerate progressing through previous chapters in order to construct it as soon as possible.</td>
               </tr>
               <tr>
                 <td style="width: 20%; text-align: center; width: 50%;">
@@ -104,15 +104,15 @@
                 <td style="width: 20%; text-align: center; width: 50%;">
                     <h6 id="header" class="card-title text-center text-title font-weight-bold" style="text-align: left;">Tips & Evaluation<br></h6>
                 </td>
-                <td style="width: 8%; text-align: center; width: 50%;">The D222-z "Simia Sapiens" wonder is a rare gem, as both of its effects 
-                  are a must-have for any city. The Sentient Goods reduction offers significant assistance for these goods, especially in future 
+                <td style="width: 8%; text-align: center; width: 50%;">The D222-z "Simia Sapiens" wonder is a true gem, as both of its effects 
+                  are a must-have for your city. The Sentient Goods reduction offers an excelent help with these goods, especially in future 
                   chapters where their requirements will notably increase. Upgrading the wonder to its highest level and maximizing this effect 
                   will almost negate the need for further wonders' effects on Sentient Goods, such as the one in the Vortex of Storage from 
                   Chapter 15.<br>
-                  The second effect is truly exceptional, as it increases the output of Units from any Military Buildings without extending 
-                  the Training time or raising the Training costs. This exceptional boost can significantly enhance your city's military power. 
+                  The second effect is interesting even more, as it increases the output of Units from any Military Buildings without extending 
+                  the Training time or raising the Training costs. This boost can significantly enhance your city's military power. 
                   I highly recommend constructing this wonder as soon as you reach Chapter 14 and prioritize upgrading it to the highest level.
-                  The combination of the wonders of this chapter will be truly remarkable for your future Tournament's performance.</td>
+                  The combination of the wonders from this may highly influence your future Tournament's performance.</td>
               </tr>
               <tr>
                 <td style="width: 20%; text-align: center; width: 50%;">
