--- a/guestRaces/guestRacesTabs/ch15/wonders.html
+++ b/guestRaces/guestRacesTabs/ch15/wonders.html
@@ -49,8 +49,8 @@
                   additional Sentient Goods from Orcs productions (thanks to the Pyramid of Purification from Chapter 13), I found no need for 
                   an additional boost.<br>
                   As for the first effect of the Vortex of Storage, increasing the storage capacity of Settlement Portals is a welcome addition, 
-                  particularly for those with limited Portal Profit instants. Having a higher capacity enhances the efficiency of each Portal Profit 
-                  used. However, if you actively participate in the weekly Spire of Eternity or events, chances are you already possess dozens of 
+                  particularly for those with the limited amount of Portal Profit instants. Having a higher capacity enhances the efficiency of each Portal Profit 
+                  used. However, if you actively participate in the weekly Spire of Eternity or events, chances are you already have dozens of 
                   these instants in your inventory. In such a case, using more of them to achieve the desired effect won't be a significant concern,
                   nor the need to construct an additional wonder to your city.</td>
               </tr>
@@ -101,12 +101,12 @@
                 </td>
                 <td style="width: 8%; text-align: center; width: 50%;">Every wonder that offers Population should be considered a must-have 
                   structure in your city. The significance of this wonder's effect improves with each new chapter, as the Population provided 
-                  in Residential buildings increases with each advancement. It is even possible that in the future, the developers may take 
-                  into account players having this wonder and set the further requirements accordingly. As such, I highly recommend everyone to construct 
+                  in Residential buildings increases with each advancement. It is even possible that in the future, the developers may actually count with 
+                  players having this wonder and set the further requirements accordingly. I highly recommend everyone to build 
                   this wonder.<br>
                   The effect gets even more prominent if you own Premium Residential buildings (for example if you won them from the Spire of Eternity
                   or bought them with Diamonds).<br>
-                  The second effect serves as a valuable addition to the already important Population boost provided by the effect number one.</td>
+                  The second effect serves as a valuable addition to the important Population boost.</td>
               </tr>
               <tr>
                 <td style="width: 20%; text-align: center; width: 50%;">
