--- a/guestRaces/guestRacesTabs/ch16/wonders.html
+++ b/guestRaces/guestRacesTabs/ch16/wonders.html
@@ -48,7 +48,7 @@
                   to other wonders first. Upon careful calculation, it becomes evident that it would take years to recoup the Knowledge Points spent on 
                   upgrading this wonder solely from its daily effect. Hence, the 
                   only relevant effect for me was the extra Ranking Points per Spire Crystal. The effectiveness of this effect depends on how much 
-                  value you place on your position in the Ranking and how proficiently you and your fellowship can achieve commendable results in 
+                  value you place on your position in the Ranking and how often you and your fellowship can achieve advanced rewards in 
                   the Spire of Eternity.<br>
                   If you find both aspects important and advantageous, building this wonder might make sense. However, it primarily hinges on your 
                   personal preferences. It's worth noting that this wonder is not a must-have structure, and it won't provide any important benefits 
@@ -100,10 +100,10 @@
                     <h6 id="header" class="card-title text-center text-title font-weight-bold" style="text-align: left;">Tips & Evaluation<br></h6>
                 </td>
                 <td style="width: 8%; text-align: center; width: 50%;">Similarly to Spire Library, while I did choose to construct this wonder in my city, I gave higher priority 
-                  to other wonders first. The production of Venom Drone Riders was not a decisive factor in determining whether I should build this wonder or not. 
+                  to other wonders first. The production of Venom Drone Riders was not a decisive factor for me in determining whether I should build this wonder or not. 
                   Hence, the 
                   only relevant effect for me was the extra Ranking Points per Tournament Chest. The effectiveness of this effect depends on how much 
-                  value you place on your position in the Ranking and how proficiently you and your fellowship can achieve commendable results in 
+                  value you place on your position in the Ranking and how proficiently you and your fellowship can achieve the advanced chests in 
                   the Tournaments.<br>
                   If you find both aspects important and advantageous, building this wonder might make sense. However, it primarily hinges on your 
                   personal preferences. It's worth noting that similarly to Spire Library, this wonder is not a must-have structure, and it won't provide any important benefits 
