--- a/guestRaces/guestRacesTabs/ch17/wonders.html
+++ b/guestRaces/guestRacesTabs/ch17/wonders.html
@@ -49,12 +49,12 @@
                    However, this option is no longer available, making it quite challenging to gather Combining Catalysts now. Despite these changes,
                    I still find the most practical approach to obtaining Combining Catalysts by producing them within the Magic Academy. Given my
                    above-average results in Tournaments, I have an abundant supply of other spells from there, so my Magic Academy is dedicated
-                   entirely to producing Combining Catalysts. Consequently, I haven't faced any issues with their availability for quite some time.
+                   entirely to producing Combining Catalysts. I haven't faced any issues with their availability for quite some time.
                    While I believe this wonder may offer relief to some players, I personally decided against investing my city's space and resources
                    in it.<br>
                   The second effect of the wonder is not a motivating factor for me to build it either. There are already numerous other sources
                   for acquiring Sentient Goods, the most significant of which, for me, is the Pyramid of Purification wonder from Chapter 13. With
-                  ample access to Sentient Goods from other sources, I do not see the need to prioritize this wonder for its second effect.
+                  ample access to Sentient Goods from other sources, I do not see the need to prioritize this wonder for its second effect either.
                   </td>
               </tr>
               <tr>
@@ -105,13 +105,13 @@
                 <td style="width: 8%; text-align: center; width: 50%;">Similar to the Dragon Ark wonder, I find little reason to build an additional
                    wonder solely for the production of Sentient Goods.<br>
                    The usefulness of the second effect heavily relies on the performance of your fellowship in Tournaments. Tournaments serve
-                   as the primary source for Royal Restoration spells, and if your fellowship can secure all the chests, you can receive
+                   as the primary source for Royal Restoration spells, and if your fellowship can reach all the chests, you can receive
                   up to 14 Royal Restoration spells weekly. This is twice the number provided by this wonder at its highest levels, leading me
                   to question whether it is truly worthwhile to invest resources and city space in constructing it. The final decision should
                   depend on your city's specific needs, particularly considering how much you rely on event buildings, how frequently you
-                  replace them with new ones, and how often you choose to upgrade them to higher chapters instead. Weighing these factors
+                  replace them with new ones, or how often you choose to upgrade them to higher chapters instead. Weighing these factors
                   will help you determine whether the wonder aligns with your city's priorities and objectives.<br>
-                  Also note that while I do recommend having a few event culture-population hybrids in your city, I advise against focusing 
+                  Also note that while I do recommend having a few event culture-population hybrids in your city, I advise against relying 
                   solely on them. There are wonders and game mechanics that allow you to benefit the most from Residential buildings.
                   For instance, consider the Thermal Spring of Youth wonder in Chapter 15, which increases the population in each Residential 
                   building. Additionally, the Community Work introduced in Chapter 21 is exclusively provided by Residential buildings.<br>
