--- a/guestRaces/guestRacesTabs/ch18/wonders.html
+++ b/guestRaces/guestRacesTabs/ch18/wonders.html
@@ -44,19 +44,19 @@
                 <td style="width: 20%; text-align: center; width: 50%;">
                     <h6 id="header" class="card-title text-center text-title font-weight-bold" style="text-align: left;">Tips & Evaluation<br></h6>
                 </td>
-                <td style="width: 8%; text-align: center; width: 50%;">If, for instance, you possess 1,000,000 required culture, the fully upgraded
+                <td style="width: 8%; text-align: center; width: 50%;">If, for instance, you have 1,000,000 required culture, the fully upgraded
                    wonder would yield 92,000 orcs weekly if you achieve 5,000 points in the Tournament. While this number may seem appealing, I have
                   discovered more efficient strategies to produce orcs in my city, rendering the construction of an additional
-                  wonder unnecessary. Instead, I focus on incorporating more Armories into my city. They enhance the effect of Military
-                  buildings, particularly when combined with Brown Bears, and consume a substantial amount of culture (while remaining
+                  wonder unnecessary. I focus on incorporating more Armories into my city. They enhance the effect of Military
+                  buildings, particularly when combined with Brown Bears, and consume a significant amount of culture (while remaining
                   relatively inexpensive in terms of population). This not only aids in ranking but also boosts the output of several
                   other wonders that rely on required culture. For example, my city's significant number of armories greatly elevates
-                  the production of the second wonder in this chapter, the Temple of Spirits, which eliminates any need for additional
+                  the production of the second wonder in this chapter, the Temple of Spirits, which eliminates the need for additional
                   Unurium production in the Trader and also eliminates the need for constructing even bigger (and less efficient) wonder, the Vallorial Seal Tower in Chapter 19 (with the same
                   focus on Unurium).<br>
-                  Consequently, I prefer exploring alternative possibilities to gather this resource
+                  So in short, I prefer alternative possibilities to gather this resource
                   more effectively rather than constructing an additional wonder that would have no impact on other productions and
-                  effects within my city, despite its small size.<br>
+                  effects within my city, despite its small size. I have decided to not build this wonder in my city.<br>
                 I do not consider the secondary effect to be a compelling reason for constructing this wonder either.</td>
               </tr>
               <tr>
@@ -107,17 +107,19 @@
                 <td style="width: 8%; text-align: center; width: 50%;">To fully capitalize on the benefits of this wonder, your primary focus
                   should be on maximizing the amount of required culture in your city, as both of its effects heavily depend on it. I have
                   personally found success through a strategic approach involving Armories. By significantly increasing the number of Armories
-                  in my city, I managed to consume a substantial amount of culture while utilizing a relatively small population, enabling me
+                  in my city, I managed to consume a significant amount of culture while requiring a relatively small population, enabling me
                   to construct numerous Armories without significant strain.<br>
-                  For instance, let's assume you possess 1,000,000 required culture, which is approximately the average number
-                  for a Chapter 18 player. With this setup, the wonder will yield a remarkable 552,000 Unurium weekly from the Spire of Eternity
+                  For instance, let's assume you have 1,000,000 required culture, which is approximately the average number
+                  for a Chapter 18 player. With this city, the wonder will yield a remarkable 552,000 Unurium weekly from the Spire of Eternity
                   (a completion I highly recommend). Moreover, you may also receive an additional 86,250 Unurium daily if there is an ongoing
-                  event and you diligently collect event currency in the city outskirts. Consequently, this approach not only grants you
+                  event and you diligently collect event currency in the city outskirts.<br>
+                  This approach not only grants you
                   significantly more Unurium weekly compared to the second Unurium-focused wonder in the following chapter,
                   the Vallorian Seal Tower, but it also allows you to entirely cease Unurium production in the Trader. Thus, there is no longer
                   any need for switching productions between Unurium and Seeds, providing a more efficient resource management system in your
                   city.<br>
-                  The wonder is not the smallest one; however, I highly recommend it to anyone facing Unurium deficiency as it may offer a definitive solution.</td>
+                  The wonder is not the smallest one; however, I highly recommend it to anyone facing Unurium deficiency as it may offer 
+                  a definitive solution.</td>
               </tr>
               <tr>
                 <td style="width: 20%; text-align: center; width: 50%;">
