wonders ch13, ch12

--- a/guestRaces/guestRacesTabs/ch12/wonders.html
+++ b/guestRaces/guestRacesTabs/ch12/wonders.html
@@ -44,13 +44,13 @@
                 <td style="width: 20%; text-align: center; width: 50%;">
                     <h6 id="header" class="card-title text-center text-title font-weight-bold" style="text-align: left;">Tips & Evaluation<br></h6>
                 </td>
-                <td style="width: 8%; text-align: center; width: 50%;">Reduction of decay is one of the most useful benefits for your city and can greatly
-                facilitate the stacking of respective goods. Ascended goods will be an integral part of any future chapter and it makes sense to
-                ease the trading process by reducing the nightly decay. Future wonders may bring additional effects for ascended goods, but at the time
-                of writing this guide, only the Maman Le Pré's Antique Shop is known to give ascended goods when collecting community work, while
-                having almost useless secondary effect. Community Work is highly likely to receive some more interesting wonders in the future, so at this point,
-                I have decided to go with Ancestral Resting Place despite its rather large size.<br>
-                I do not consider the secondary effect to be a compelling reason for constructing this wonder.</td>
+                <td style="width: 8%; text-align: center; width: 50%;">The Sunset Towers is a must-have wonder once you discover Seeds. It provides 
+                  an effective decay reduction that greatly aids in stockpiling this resource for future use. Seeds belong to the 
+                  "Discovered Resources" category of goods in the game, and as we already know, Discovered Resources will be continually required 
+                  from the moment they are unlocked.<br>
+                  It undoubtedly makes sense to construct this wonder and upgrade it to level 30 (which offers the maximum reduction) as soon as 
+                  possible. Additionally, the effect that grants you Seeds when opening Neighbourly Help Chests can become even more prominent when 
+                  combined with the Scout's Tavern ancient wonder in Chapter 20.</td>
               </tr>
               <tr>
                 <td style="width: 20%; text-align: center; width: 50%;">
@@ -97,12 +97,16 @@
                 <td style="width: 20%; text-align: center; width: 50%;">
                     <h6 id="header" class="card-title text-center text-title font-weight-bold" style="text-align: left;">Tips & Evaluation<br></h6>
                 </td>
-                <td style="width: 8%; text-align: center; width: 50%;">Before the wonder was introduced, the scouting time reduction
-                was one of the most requested features of the community. Many players now consider the Scout's Tavern to be a highlight of the
-              latest chapters and it becomes a motivation for them to progress forward. This wonder is in my opinion the must-have for everyone who completed the chapter 20.<br>
-              The second effect can become especially useful if you have other bonuses in your city that grant you additional rewards when giving neighbourly help.
-              This can be the Sunset Towers wonder (granting additional seeds for each collected neighbourly help chest), Crystal Lighthouse / Great Bell Spire wonder
-              (granting additional boosted goods) or Moon Bear pet (providing up to 3 knowledge points for every neighbourly help chest while the effect is active).</td>
+                <td style="width: 8%; text-align: center; width: 50%;">I highly recommend building all three wonders that decrease the training time in 
+                  Military Buildings: Needles of the Tempest for Barracks, Victory Springs for Training Grounds, and Flying Academy for Mercenary 
+                  Camp. I personally prioritize the Barracks and Mercenary Camp military buildings more, as 
+                  I find the use of units from these buildings more crucial in tournaments than those provided by the Training Grounds (and also 
+                  due to the fact that two out of the five units provided by the Training Grounds require Orcs, and a reduction in their 
+                  training time would only increase the demand for orcs (which not everyone can afford)). So, if you are deciding between these three wonders and 
+                  which one to build first, I recommend starting with either of the other two first. I utilize the Lightranged units and Mages from Barracks
+                  and Mercenary Camp much more than Dryads or Ghastly Banshees from Training Grounds.<br>
+                  Moreover, the second effect of the Victory Springs wonder is highly significant and should undoubtedly find a place in 
+                  your city at some point.</td>
               </tr>
               <tr>
                 <td style="width: 20%; text-align: center; width: 50%;">
