--- a/guestRaces/guestRacesTabs/ch13/wonders.html
+++ b/guestRaces/guestRacesTabs/ch13/wonders.html
@@ -44,13 +44,21 @@
                 <td style="width: 20%; text-align: center; width: 50%;">
                     <h6 id="header" class="card-title text-center text-title font-weight-bold" style="text-align: left;">Tips & Evaluation<br></h6>
                 </td>
-                <td style="width: 8%; text-align: center; width: 50%;">Reduction of decay is one of the most useful benefits for your city and can greatly
-                facilitate the stacking of respective goods. Ascended goods will be an integral part of any future chapter and it makes sense to
-                ease the trading process by reducing the nightly decay. Future wonders may bring additional effects for ascended goods, but at the time
-                of writing this guide, only the Maman Le Pré's Antique Shop is known to give ascended goods when collecting community work, while
-                having almost useless secondary effect. Community Work is highly likely to receive some more interesting wonders in the future, so at this point,
-                I have decided to go with Ancestral Resting Place despite its rather large size.<br>
-                I do not consider the secondary effect to be a compelling reason for constructing this wonder.</td>
+                <td style="width: 8%; text-align: center; width: 50%;">To get the most out of this wonder, you will need to incorporate numerous 
+                  armories into your city. However, I won't claim that this wonder alone is the reason for occupying additional space with 
+                  armories, especially if you don't necessarily need them for orcs. In Chapter 13, my Sentient Goods production sufficed from 
+                  Manufactories, particularly after I completed Chapter 14 and unlocked the Simia Sapiens wonder, which reduced its decay.<br>
+                  Nonetheless, when I adopted a new strategy in later chapters and added several armories into my city 
+                  (to enhance the effects of the Temple of Spirits wonder and boost my ranking points (both thanks to the high amount of culture
+                  they consume)), I decided to construct the Pyramid of Purification 
+                  retrospectively. After upgrading it to the highest levels, the amount of Sentient Goods I now receive daily from collecting orcs is 
+                  more than enough to satisfy all the needs I have even without any additional production of Sentient Goods in manufactories. 
+                  Therefore, I recommend to focus on primary sources of Sentient Goods first (such as leveling your manufactories and reducing its
+                  decay by the Simia Sapiens wonder) and only utilize the Pyramid of Purification once you have more compelling reasons to 
+                  increase the amount of armories in your city and have discovered other resources that require your attention 
+                  (such as Ascended Goods).<br>                  
+                  As for the second effect, while it is a nice addition, I don't consider it to be the primary reason for constructing 
+                  this wonder.</td>
               </tr>
               <tr>
                 <td style="width: 20%; text-align: center; width: 50%;">
@@ -99,18 +107,20 @@
                 <td style="width: 20%; text-align: center; width: 50%;">
                     <h6 id="header" class="card-title text-center text-title font-weight-bold" style="text-align: left;">Tips & Evaluation<br></h6>
                 </td>
-                <td style="width: 8%; text-align: center; width: 50%;">Before the wonder was introduced, the scouting time reduction
-                was one of the most requested features of the community. Many players now consider the Scout's Tavern to be a highlight of the
-              latest chapters and it becomes a motivation for them to progress forward. This wonder is in my opinion the must-have for everyone who completed the chapter 20.<br>
-              The second effect can become especially useful if you have other bonuses in your city that grant you additional rewards when giving neighbourly help.
-              This can be the Sunset Towers wonder (granting additional seeds for each collected neighbourly help chest), Crystal Lighthouse / Great Bell Spire wonder
-              (granting additional boosted goods) or Moon Bear pet (providing up to 3 knowledge points for every neighbourly help chest while the effect is active).</td>
+                <td style="width: 8%; text-align: center; width: 50%;">The effect of this wonder is purely situational, as it depends on how much 
+                  your Mana income relies on cultural buildings. If you tend to collect numerous Mana-producing buildings from events, and their 
+                  output constitutes the majority of your Mana income, then it makes sense to build this wonder and upgrade it to high levels.<br>
+                  However, I have always preferred the Dragon Abbey for mana, as my active participation in Tournaments has resulted in thousands 
+                  of spells in my inventory, which I can use whenever I need more Mana. I only own a few Mana-producing cultural buildings in my 
+                  city, and I reduce their decay through the Maze of the Dark Matter ancient wonder.<br>                  
+                  Furthermore, I have never considered the effect of increasing the power of the Ensorcelled Endowment enchantment to be 
+                  a compelling reason for constructing this wonder.</td>
               </tr>
               <tr>
                 <td style="width: 20%; text-align: center; width: 50%;">
                     <h6 id="header" class="card-title text-center text-title font-weight-bold" style="text-align: left;">Rating<br></h6>
                 </td>
-                <td style="width: 8%; text-align: center; width: 50%;"><b class="score_color_7">7/10</b></td>
+                <td style="width: 8%; text-align: center; width: 50%;"><b class="score_color_6">6/10</b></td>
               </tr>
               <tr>
                 <td style="width: 20%; text-align: center; width: 50%;">
