gr ch20 settlement

--- a/guestRaces/guestRacesTabs/ch20/intro.html
+++ b/guestRaces/guestRacesTabs/ch20/intro.html
@@ -16,6 +16,32 @@
         </i>
         <br>
 
+        <h5 id="header" class="card-title text-center text-title font-weight-bold" style="text-align: left; margin-bottom: 25px;">..:: What's new in this chapter? ::..</h5>
+
+        <div class="card-spoiler-visualOnly border-spoiler mb-3" style="width: 100%; padding-top: 20px; padding-bottom: 20px; padding-left: 2%; padding-right: 2%;">
+
+        <h5 id="header" class="card-title text-center text-title font-weight-bold" style="text-align: left;">Precious Ascended Goods<br></h5>
+
+        <center><img src="https://i.ibb.co/3NfG9dh/ascended-gems-xl.png" style="margin-bottom: 10px;"></center>
+
+        <b>Precious Ascended Goods</b> (<img src="https://i.ibb.co/m9Hc7V4/ascendedelixir.png" style="width: 22px;">
+        <img src="https://i.ibb.co/G7kpP6T/ascendedmagic-dust.png" style="width: 22px;"><img src="https://i.ibb.co/T4ZdXHM/ascendedgems.png" style="width: 22px;">),
+        are the last introduced group of Ascended Goods. Similarly to the Basic and Refined Ascended Goods, they are traded using Merchants.
+        Trader of level 9 is required.
+
+        </div>
+
+        <div class="card-spoiler-visualOnly border-spoiler mb-3" style="width: 100%; padding-top: 20px; padding-bottom: 20px; padding-left: 2%; padding-right: 2%;">
+
+        <h5 id="header" class="card-title text-center text-title font-weight-bold" style="text-align: left;">Avatars<br></h5>
+
+        After unlocking this chapter, you receive the following collection of 4 new avatars.<br><br>
+
+        <center><img src="https://i.ibb.co/1sB1RLx/portrait-1.png"> <img src="https://i.ibb.co/GVS8p57/portrait-2.png">
+            <img src="https://i.ibb.co/ZW6vCnj/portrait-3.png"> <img src="https://i.ibb.co/3C5bF9G/portrait-4.png"></center>
+
+        </div>
+
     </div>
 
 </div>
