gr ch19 settlement

--- a/guestRaces/guestRacesTabs/ch19/intro.html
+++ b/guestRaces/guestRacesTabs/ch19/intro.html
@@ -17,6 +17,32 @@
             <p class="small-paragraph">Will you be able to stop his evil plans in time, or will his arrival be your downfall?</p>
         </i>
         <br>
+
+        <h5 id="header" class="card-title text-center text-title font-weight-bold" style="text-align: left; margin-bottom: 25px;">..:: What's new in this chapter? ::..</h5>
+
+        <div class="card-spoiler-visualOnly border-spoiler mb-3" style="width: 100%; padding-top: 20px; padding-bottom: 20px; padding-left: 2%; padding-right: 2%;">
+
+        <h5 id="header" class="card-title text-center text-title font-weight-bold" style="text-align: left;">Refined Ascended Goods<br></h5>
+
+        <center><img src="https://i.ibb.co/ZK3FMv9/ascended-silk-xl.png" style="margin-bottom: 10px;"></center>
+
+        <b>Precious Ascended Goods</b> (<img src="https://i.ibb.co/1rYyB1N/ascendedcrystal.png" style="width: 22px;">
+        <img src="https://i.ibb.co/RcdYQM8/ascendedscrolls.png" style="width: 22px;"><img src="https://i.ibb.co/7p27kv6/ascendedsilk.png" style="width: 22px;">),
+        are the second introduced group of Ascended Goods. Similarly to the Basic Ascended Goods, they are traded using Merchants.
+        Trader of level 8 is required.
+
+        </div>
+
+        <div class="card-spoiler-visualOnly border-spoiler mb-3" style="width: 100%; padding-top: 20px; padding-bottom: 20px; padding-left: 2%; padding-right: 2%;">
+
+        <h5 id="header" class="card-title text-center text-title font-weight-bold" style="text-align: left;">Avatars<br></h5>
+
+        After unlocking this chapter, you receive the following collection of 4 new avatars.<br><br>
+
+        <center><img src="https://i.ibb.co/W52pkR5/portrait-1.png"> <img src="https://i.ibb.co/x3RnLhn/portrait-2.png">
+            <img src="https://i.ibb.co/ZdMHp0P/portrait-3.png"> <img src="https://i.ibb.co/BrP1Yx4/portrait-4.png"></center>
+
+        </div>
         
     </div>
 
