--- a/guestRaces/guestRacesTabs/ch21/settlement.html
+++ b/guestRaces/guestRacesTabs/ch21/settlement.html
@@ -64,13 +64,13 @@
                                             <span aria-hidden="true">×</span>
                                         </button>
                                     </div>
-                                    <div class="modal-body" style="text-align: center; max-height: 550px; overflow-y: auto;">
+                                    <div class="modal-body" style="text-align: left; max-height: 550px; overflow-y: auto;">
                                         <h5 id="header" class="card-title text-center text-title font-weight-bold" style="text-align: left;">..:: Productions ::..<br></h5>
-                                        <img src="https://i.ibb.co/tHkHbMC/portal-1-productions.png" style="width: 70%;"><br><br>
+                                        <center><img src="https://i.ibb.co/tHkHbMC/portal-1-productions.png" style="width: 70%;"></center><br>
                                         Vallorian Dragon Tower at level 1 can only store your resources. You need to upgrade it to level 2 in order
                                         to start producing Oblations.<br><br>
                                         <h5 id="header" class="card-title text-center text-title font-weight-bold" style="text-align: left;">..:: Requirements ::..<br></h5>
-                                        <img src="https://i.ibb.co/fxryQDQ/portal-1-requirements.png" style="width: 60%;"><br><br>
+                                        <center><img src="https://i.ibb.co/fxryQDQ/portal-1-requirements.png" style="width: 60%;"></center><br>
                                         Except for Orcs, the Vallorian Dragon Tower also requires Prosperity. Make sure you have upgraded some of the core city buildings
                                         before placing the first Settlement buildings.
                                     </div>
