gr ch19 intro fix

--- a/guestRaces/guestRacesTabs/ch19/intro.html
+++ b/guestRaces/guestRacesTabs/ch19/intro.html
@@ -26,7 +26,7 @@
 
         <center><img src="https://i.ibb.co/ZK3FMv9/ascended-silk-xl.png" style="margin-bottom: 10px;"></center>
 
-        <b>Precious Ascended Goods</b> (<img src="https://i.ibb.co/1rYyB1N/ascendedcrystal.png" style="width: 22px;">
+        <b>Refined Ascended Goods</b> (<img src="https://i.ibb.co/1rYyB1N/ascendedcrystal.png" style="width: 22px;">
         <img src="https://i.ibb.co/RcdYQM8/ascendedscrolls.png" style="width: 22px;"><img src="https://i.ibb.co/7p27kv6/ascendedsilk.png" style="width: 22px;">),
         are the second introduced group of Ascended Goods. Similarly to the Basic Ascended Goods, they are traded using Merchants.
         Trader of level 8 is required.
