--- a/index.html
+++ b/index.html
@@ -158,6 +158,7 @@
         <div class="col-md-6 col-sm-11 center bg-skin_light_background rounded-bottom75 rounded-top75" style="padding-top: 20px; padding-bottom: 20px; max-height: 550px; overflow-y: scroll;">
             <div
              id="column_with_news" class="col-md">
+                <li><strong>Autumn Zodiac event arrived!</strong> All buildings from this event are now in the database (August 8th 2023)</li>
                 <li><strong>Chapter 21 arrived!</strong> All buildings have been regenerated to contain values for chapter 21 (July 20th 2023)</li>
                 <li><strong>Aqua Splendor event arrived!</strong> All buildings from this event are now in the database (June 26th 2023)</li>
                 <li><strong>Floral Awakening event arrived!</strong> All buildings from this event are now in the database (May 25th 2023)</li>
