--- a/guestRaces/dwarves.html
+++ b/guestRaces/dwarves.html
@@ -210,8 +210,8 @@
 
 </script>
 
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4154227292627045"
-                            crossorigin="anonymous"></script> <!-- In-article -->
+<!--<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4154227292627045"
+                            crossorigin="anonymous"></script>  In-article 
                         <ins class="adsbygoogle"
                             style="display:block; text-align:center;"
                             data-ad-layout="in-article"
@@ -220,7 +220,7 @@
                             data-ad-slot="9774392946"></ins>
                         <script>
                             (adsbygoogle = window.adsbygoogle || []).push({});
-                        </script>
+                        </script>-->
 
 <div id="event_main" style="padding-top: 20px;">
     <div id="event_buildings" style="width: 100%;">
