--- a/guestRaces/guestRacesTabs/ch21/settlement.html
+++ b/guestRaces/guestRacesTabs/ch21/settlement.html
@@ -448,7 +448,18 @@
 
     <h5 id="header" class="card-title text-center text-title font-weight-bold" style="text-align: left;">..:: Tips & Tricks ::..<br><br></h5>
 
-    Soon<br>
+    <ul>
+        <li>The minimal required number of Vallorian Workshops and Workshops of Diabhal's Horde is 9 from each (based on the questline). This amount is ideal
+            as long as you can collect productions from Workshops of Diabhal's Horde every 2 hours (so that 2 production cycles in Workshops of Diabhal's Horde
+            match 1 production cycle in Vallorian Workshops). If you are unable to log in regularly, you may consider increasing the number of
+            Workshops of Diabhal's Horde.
+        </li>
+        <li>
+            After upgrading your production buildings to level 4, you will face high requirements for both Sentient and Ascended goods. Ensure that 
+            you make regular use of your Merchants and consider engaging in cross-tier trades during the night. This strategy will yield more Basic Ascended goods 
+            when offering Precious Ascended goods and you won't suffer from extended acceptance times (as these offers are generally in lower demand among other players).
+        </li>
+    </ul>
         
     </div>
 
